--- a/lab03.cbp
+++ b/lab03.cbp
@@ -31,7 +31,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-DCURL_STATICLIB" />
+			<Add directory="curl/include" />
 		</Compiler>
+		<Linker>
+			<Add library="libcurl.dll.a" />
+			<Add directory="curl/lib" />
+		</Linker>
 		<Unit filename="lab03.cpp" />
 		<Unit filename="lab03.h">
 			<Option target="&lt;{~None~}&gt;" />
